[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]", "pykakasi>=2.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "unihandecode"
dynamic = ["version"]
description = "US-ASCII transliterations of Unicode text"
readme = "README.rst"
authors = [
    {name = "Hioshi Miura", email = "miurahr@linux.com"}
]
license = {text = "GPLv3"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pykakasi>=2.0.1",
]

[project.urls]
Homepage = "https://github.com/miurahr/unihandecode/"

[project.optional-dependencies]
check = [
    "flake8",
    "twine",
    "docutils",
    "check-manifest",
    "readme-renderer",
    "pygments",
    "isort",
]
docs = [
    "sphinx",
    "sphinx-py3doc-enhanced-theme",
]
test = [
    "pytest",
    "pytest-cov",
    "tox",
    "pyannotate",
    "coverage[toml]",
    "coveralls",
]
mypy = [
    "mypy",
    "mypy_extensions",
    "pykakasi>=2.0.1",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["src/unihandecode/data/*.txt"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
parallel = true
source = ["unihandecode"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["if __name__ == .__main__.:", "pragma: no-cover", "@abstract", "def __repr__"]

[tool.pytest.ini_options]
python_files = "test*.py"
addopts = "--cov-config=pyproject.toml --cov --cov-append"
norecursedirs = ".git _build tmp* .eggs"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
show_column_numbers = true
ignore_missing_imports = true

[tool.tox]
env_list = ["check", "py312", "py313", "py314", "docs", "mypy"]

[tool.tox.env_run_base]
extras = ["test"]
pass_env = ["HOME", "PATH", "TRAVIS", "TRAVIS_JOB_ID", "TRAVIS_BRANCH"]
commands = [["pytest", "-vv"]]

[tool.tox.env.check]
base_python = "python3.12"
extras = ["check"]
ignore_errors = true
commands = [
    ["check-manifest", "{tox_root}"],
    ["flake8", "src", "tests", "setup.py"],
    ["isort", "--verbose", "--check-only", "--diff", "--recursive", "unihandecode", "tests", "setup.py"]
]

[tool.tox.env.docs]
base_python = "python3.12"
extras = ["docs"]
commands = [
    ["sphinx-build", "{posargs:-E}", "-b", "html", "docs", "build/docs"],
    ["sphinx-build", "-b", "linkcheck", "docs", "build/docs"]
]

[tool.tox.env.mypy]
base_python = "python3.12"
extras = ["mypy"]
commands = [["mypy", "src"]]
