[bdist_wheel]
universal=1

[metadata]
name = unihandecode
url = https://github.com/miurahr/unihandecode/
license = GPLv3
author = Hioshi Miura
author_email = miurahr@linux.com
description = US-ASCII transliterations of Unicode text
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
      Development Status :: 5 - Production/Stable
      Environment :: Console
      License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
      Operating System :: MacOS :: MacOS X
      Operating System :: Microsoft :: Windows
      Operating System :: POSIX
      Operating System :: POSIX :: Linux
      Programming Language :: Python
      Programming Language :: Python :: 2.7
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.5
      Programming Language :: Python :: 3.6
      Programming Language :: Python :: 3.7
      Programming Language :: Python :: 3.8
      Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
provides = unihandecode
setup_requires =
    pykakasi>=2.0.0a3
    setuptools>=42
    setuptools-scm[toml]>=3.5.0
    wheel
install_requires =
    pykakasi

[options.packages.find]
where = src

[options.package_data]
* = src/unihandecode/data/*.txt

[options.extras_require]
dev =
    flake8
    coverage
    coveralls
    pytest
    pytest-cov
    tox
    wheel
    twine

[flake8]
ignore = E701
max-line-length = 160
exclude = .git,__pycache__,docs/conf.py,build,dist,tmp,venv
