[bdist_wheel]
universal=1

[metadata]
name = unihandecode
url = https://github.com/miurahr/unihandecode/
license = GPLv3
author = Hioshi Miura
author_email = miurahr@linux.com
description = US-ASCII transliterations of Unicode text
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
      Development Status :: 5 - Production/Stable
      Environment :: Console
      License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
      Operating System :: MacOS :: MacOS X
      Operating System :: Microsoft :: Windows
      Operating System :: POSIX
      Operating System :: POSIX :: Linux
      Programming Language :: Python
      Programming Language :: Python :: 2.7
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.5
      Programming Language :: Python :: 3.6
      Programming Language :: Python :: 3.7
      Programming Language :: Python :: 3.8
      Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
provides = unihandecode
install_requires =
    pykakasi>=2.0.0
setup_requires =
    setuptools>=42
    setuptools-scm[toml]>=3.5.0
    wheel
    pep517

[options.packages.find]
where = src

[options.package_data]
* = src/unihandecode/data/*.txt

[options.extras_require]
check =
    flake8
    twine
    docutils
    check-manifest
    readme-renderer
    pygments
    isort
docs =
    sphinx>=1.8
    sphinx-py3doc-enhanced-theme
test =
    pytest
    pytest-cov
    tox
    pyannotate
    coverage[toml]==5.0.1
    coveralls
mypy =
    mypy==0.770
    mypy_extensions==0.4.3
    pykakasi>=2.0.0


[flake8]
ignore = E701
max-line-length = 160
exclude = .git,__pycache__,docs/conf.py,build,dist,tmp,venv
